[#172] Remove body tag & fix tab/spacing

--- a/frontend/src/styles/LoginRegistrationPage.css
+++ b/frontend/src/styles/LoginRegistrationPage.css
@@ -118,7 +118,7 @@ div.logo {
 .align-user-field form .user-form-field ::placeholder{
   font-family: 'Teko';
   font-weight: 200;
-  font-size: 26px;
+  font-size: 28px;
   word-spacing: 1px;
   letter-spacing: 1.5px;
 }
